--- a/index.html
+++ b/index.html
@@ -5,8 +5,52 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <meta name="description" content="" />
+
+  <!-- calls for the arcgis api's CSS file and JS library. -->
+  <link rel="stylesheet" href="https://js.arcgis.com/4.25/esri/themes/light/main.css">
+  <script src="https://js.arcgis.com/4.25/"></script>
+
+  <!-- Adding the modules, API key, and map constant needed for a full screen map app-->
+  <script>
+
+    require([
+      "esri/config",
+      "esri/Map",
+      "esri/views/MapView"
+    ], function(esriConfig, Map, MapView) {   
+      esriConfig.apiKey = "AAPK0401ef0eec41482c8aa0f4e7b5b118c24q7q7NIv8wbHpLPAB-Gvij3hfV_lpqWtqNzqcjDlMqJCmQc5meuAETYsSI2KOgu";
+      const map = new Map({
+        basemap: "arcgis-topographic" // Basemap layer
+      });
+
+      const view = new MapView({
+        map: map,
+        center: [-97.7431, 30.2672], // Longitude, latitude
+        zoom: 13, // Zoom level
+        container: "viewDiv" // Div element
+      });
+    });  
+  </script>
+
+
+
+  <!-- css to make a full screen map-->
+    <style>
+      html,
+      body,
+      #viewDiv {
+        padding: 0;
+        margin: 0;
+        height: 100%;
+        width: 100%;
+      }
+    </style>
+
 </head>
 <body>
-  <h1>Hello, world! I am using Git!</h1>
+
+  <!-- the div to displays the map-->
+  <div id="viewDiv"></div>
+
 </body>
 </html>
