--- a/index.html
+++ b/index.html
@@ -16,20 +16,46 @@
     require([
       "esri/config",
       "esri/Map",
-      "esri/views/MapView"
-    ], function(esriConfig, Map, MapView) {
+      "esri/views/MapView",
+      "esri/widgets/BasemapGallery",
+      "esri/widgets/Locate",
+      "esri/widgets/Search"
+    ], function(esriConfig, Map, MapView, BasemapGallery, Locate, Search) {
 
       esriConfig.apiKey = "AAPK0401ef0eec41482c8aa0f4e7b5b118c24q7q7NIv8wbHpLPAB-Gvij3hfV_lpqWtqNzqcjDlMqJCmQc5meuAETYsSI2KOgu_";
       const map = new Map({
-        basemap: "arcgis-topographic" // Basemap layer
+        basemap: "arcgis-imagery" // Basemap layer
       });
 
+      //view of Mount Everest
       const view = new MapView({
         map: map,
-        center: [-97.7431, 30.2672], // Longitude, latitude
-        zoom: 13, // Zoom level
+        center: [86.9250, 27.9881], // Longitude, latitude
+        zoom: 9, // Zoom level
         container: "viewDiv" // Div element
       });
+
+      // Create a BasemapGallery widget instance and add it to the view
+      const basemapGallery = new BasemapGallery({
+        view: view
+      });
+      view.ui.add(basemapGallery, "top-right");
+
+      // Create a Locate widget instance and add it to the view
+      const locate = new Locate({
+        view: view
+      });
+      view.ui.add(locate, "top-left");
+
+      // Create a Search widget instance and add it to the view
+      const searchWidget = new Search({
+        view: view
+      });
+      view.ui.add(searchWidget, {
+        position: "top-right",
+        index: 2
+      });
+
     });  
   </script>
 
