--- a/index.html
+++ b/index.html
@@ -204,6 +204,34 @@
         // Add the feature layer to the map
         map.add(placesofworship);
   
+        //define the popup template for the feature layer (transport)
+        const featureLayerPopupTemplate_transport = {
+          title: "Transport",
+          content: "<b>Name:</b> {name} <br><b>Class:</b> {fclass} <br><b>District:</b> {district}"
+        }
+
+        //const for icon airport
+        const airportRenderer = {
+          type: "simple",
+          symbol: {
+            type: "picture-marker",
+            url: "https://sounny.github.io/agol/outline_local_airport_black_24dp.png",
+            width: "18px",
+            height: "18px"
+          }
+        };
+
+        // Create a FeatureLayer from a service (transport)
+        const transport = new FeatureLayer({
+          url: "https://services.arcgis.com/HRPe58bUyBqyyiCt/arcgis/rest/services/Transport/FeatureServer",
+          renderer: airportRenderer,
+          outFields: ["name", "fclass", "district"],
+          popupTemplate: featureLayerPopupTemplate_transport
+        });
+        
+        // Add the feature layer to the map
+        map.add(transport);
+
   
 
       // Expand widget for basemap gallery
