--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
           type: "simple",
           symbol: {
             type: "picture-marker",
-            url: "https://sounny.github.io/agol/outline_local_airport_black_24dp.png",
+            url: "https://dski97.github.io/agol-dom/outline_local_airport_black_24dp.png",
             width: "18px",
             height: "18px"
           }
