--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         const transport = new FeatureLayer({
           url: "https://services.arcgis.com/HRPe58bUyBqyyiCt/arcgis/rest/services/Transport/FeatureServer",
           renderer: airportRenderer,
-          defintionExpression: "fclass = 'Airport'",
+          definitionExpression: "fclass = 'Airport'",
           outFields: ["name", "fclass", "district"],
           popupTemplate: featureLayerPopupTemplate_transport
         });
