--- a/index.html
+++ b/index.html
@@ -209,6 +209,26 @@
           title: "Transport",
           content: "<b>Name:</b> {name} <br><b>Class:</b> {fclass} <br><b>District:</b> {district}"
         }
+        
+        //const to make airport labels
+        const airportLabels = {
+          symbol: {
+            type: "text",
+            color: "#FFFFFF",
+            haloColor: "#5E8D74",
+            haloSize: "2px",
+            font: {
+              size: 12,
+              family: "Noto Sans",
+              style: "italic",
+              weight: "normal"
+            }
+          },
+          labelPlacement: "above-center",
+          labelExpressionInfo: {
+            expression: "$feature.name"
+          }
+        };
 
         //const for icon airport
         const airportRenderer = {
@@ -227,6 +247,7 @@
           renderer: airportRenderer,
           definitionExpression: "fclass = 'Airport'",
           outFields: ["name", "fclass", "district"],
+          labelingInfo: [airportLabels],
           popupTemplate: featureLayerPopupTemplate_transport
         });
         
