--- a/index.html
+++ b/index.html
@@ -210,6 +210,12 @@
           title: "Transport",
           content: "<b>Name:</b> {name} <br><b>Class:</b> {fclass} <br><b>District:</b> {district}"
         }
+
+        //define the popup template for the editable feature layer (airport)
+        const featureLayerPopupTemplate_airport = {
+          title: "Airport Visited",
+          content: "<b>Airport Code:</b> {AirportCode}"
+        }
         
         //const to make airport labels
         const airportLabels = {
@@ -251,6 +257,26 @@
           }
         };
 
+        //const for airport visited labels
+        const airportVisitedLabels = {
+          symbol: {
+            type: "text",
+            color: "#FFFFFF",
+            haloColor: "#8B0000",
+            haloSize: "2px",
+            font: {
+              size: 12,
+              family: "Noto Sans",
+              style: "italic",
+              weight: "normal"
+            }
+          },
+          labelPlacement: "below-center",
+          labelExpressionInfo: {
+            expression: "$feature.AirportCode"
+          }
+        };
+
         //const for icon airport
         const airportRenderer = {
           type: "simple",
@@ -271,6 +297,17 @@
             width: "18px",
             height: "18px"
           }};
+
+          //const for icon airport visited
+        const airportVisitedRenderer = {
+          type: "simple",
+          symbol: {
+            type: "picture-marker",
+            url: "https://dski97.github.io/agolrest-dom/outline_download_done_black_24dp.png",
+            width: "18px",
+            height: "18px"
+          }
+        };
 
         // Create a FeatureLayer from a service (transport) - airport
         const transportAirport = new FeatureLayer({
@@ -301,10 +338,11 @@
         //adding the const for the editable feature layer
         const myAirports = new FeatureLayer({
         url: "https://services.arcgis.com/HRPe58bUyBqyyiCt/arcgis/rest/services/My_Airports_Dom/FeatureServer",
-        
-        //adding the popup here
+        renderer: airportVisitedRenderer,
+        labelingInfo: [airportVisitedLabels],
+        popupTemplate: featureLayerPopupTemplate_airport,
         outFields: ["AirportCode"],
-
+        title: "Airports Visited",
         });
 
         //adding the feature layer to the map
