--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>Connecticut Find a Tag Sale Web App</title>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
   <meta name="description" content="" />
 
   <!-- calls for the arcgis api's CSS file and JS library. -->
