--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Connecticut Find a Tag Sale Web App</title>
+  <title>Tag Sale Locator</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
   <meta name="description" content="" />
@@ -12,6 +12,26 @@
 
   <!-- Adding the modules, API key, and map constant needed for a full screen map app-->
   <script>
+    window.onload = function() {
+    var modal = document.getElementById("myModal");
+    var span = document.getElementsByClassName("close")[0];
+
+    // When the page loads, open the modal 
+    modal.style.display = "block";
+
+    // When the user clicks on <span> (x), close the modal
+    span.onclick = function() {
+      modal.style.display = "none";
+    }
+
+    // When the user clicks anywhere outside of the modal, close it
+    window.onclick = function(event) {
+      if (event.target == modal) {
+        modal.style.display = "none";
+      }
+    }
+  }
+
 
     require([
       "esri/config",
@@ -43,6 +63,7 @@
         zoom: 9, // Zoom level
         container: "viewDiv" // Div element
       });
+
 
       //adding the const for the graphics layer
       const graphicsLayer = new GraphicsLayer();
@@ -290,16 +311,84 @@
       #viewDiv {
         padding: 0;
         margin: 0;
-        height: 100%;
+        height: calc(100% - 15px);
         width: 100%;
       }
+      #heading {
+      padding: 0;
+      margin: 0;
+      height: 100%;
+      width: 100%;
+      background-color: #0098db;
+    }
+
+    .header {
+      text-align: left;
+      background: #267a6a;
+      color: rgb(255, 255, 255);
+      height: 44px;
+      display: flex;
+      align-items: center;
+      font-weight: bolder;
+      font-size: 10pt;
+      padding-left: 10px;
+    }
+      .modal {
+      display: none; /* Hidden by default */
+      position: fixed; /* Stay in place */
+      z-index: 1; /* Sit on top */
+      padding-top: 100px; /* Location of the box */
+      left: 0;
+      top: 0;
+      width: 100%; /* Full width */
+      height: 100%; /* Full height */
+      overflow: auto; /* Enable scroll if needed */
+      background-color: rgb(0,0,0); /* Fallback color */
+      background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+      text-align: center;
+      }
+
+      .modal-content {
+        background-color: #fefefe;
+        margin: auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 80%;
+      }
+
+      .close {
+        color: #aaaaaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+      }
+
+      .close:hover,
+      .close:focus {
+        color: #000;
+        text-decoration: none;
+        cursor: pointer;
+      }
+
     </style>
 
 </head>
 <body>
-
+  <!-- the div to display the header-->
+  <div class = "header">
+    <h1>Tag Sale Locator</h1>
+  </div>
   <!-- the div to displays the map-->
   <div id="viewDiv"></div>
+  <!-- the div to add modal-->
+  <div id="myModal" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h2>Welcome to Tag Sale Locator</h2>
+      <p>This application will help you locate tag sales and other events near you. You can use the map to find the locations of these events. Click on the 'X' or anywhere outside this box to close this message and start using the application.</p>
+    </div>
+  </div>
+
 
 </body>
 </html>
