update the modal

--- a/index.html
+++ b/index.html
@@ -383,11 +383,18 @@
   <!-- the div to add modal-->
   <div id="myModal" class="modal">
     <div class="modal-content">
-      <span class="close">&times;</span>
-      <h2>Welcome to Tag Sale Locator</h2>
-      <p>This application will help you locate tag sales and other events near you. You can use the map to find the locations of these events. Click on the 'X' or anywhere outside this box to close this message and start using the application.</p>
+        <span class="close">&times;</span>
+        <h2>Welcome to the Tag Sale Locator App!</h2>
+        <p>This interactive tool is designed to help you discover tag sales happening in your area. Use this app to find great deals, rare treasures, and unique items sold at local tag sales. Here are some features you can take advantage of:</p>
+        <ul>
+            <li><strong>Search Functionality:</strong> Use the search bar at the top left corner of the map to search for a specific area or address. The map will show you any tag sales happening in that location.</li>
+            <li><strong>Locate Button:</strong> Want to see tag sales near your current location? Click on the locate button at the top left corner of the map to center the view on your current location.</li>
+            <li><strong>Basemap Gallery:</strong> Want a different view? Click on the basemap icon at the top right corner to change the map's appearance to best suit your preference.</li>
+            <li><strong>Legend:</strong> Not sure what the symbols on the map mean? Click on the legend button at the bottom left corner for a breakdown of all the symbols used on the map.</li>
+        </ul>
+        <p>Start exploring now and find your next treasure at a tag sale near you! Click on the 'X' or anywhere outside this box to close this message and start using the application.</p>
     </div>
-  </div>
+</div>
 
 
 </body>
