--- a/index.html
+++ b/index.html
@@ -343,13 +343,13 @@
       width: 100%; /* Full width */
       height: 100%; /* Full height */
       overflow: auto; /* Enable scroll if needed */
-      background-color: rgb(0,0,0); /* Fallback color */
-      background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+      background-color: rgb(82, 36, 36); /* Fallback color */
+      background-color: rgba(141, 30, 30, 0.4); /* Black w/ opacity */
       text-align: center;
       }
 
       .modal-content {
-        background-color: #fefefe;
+        background-color: #e7e7e7;
         margin: auto;
         padding: 20px;
         border: 1px solid #888;
@@ -384,6 +384,7 @@
   <div id="myModal" class="modal">
     <div class="modal-content">
         <span class="close">&times;</span>
+        <img src ="tag-sale.jpg" alt="Tag Sale!" width="300" height="153">
         <h2>Welcome to the Tag Sale Locator App!</h2>
         <p>This interactive tool is designed to help you discover tag sales happening in your area. Use this app to find great deals, rare treasures, and unique items sold at local tag sales. Here are some features you can take advantage of:</p>
         <ul>
